--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:dev": "REACT_APP_ENV=development react-scripts start",
-    "start:prod": "REACT_APP_ENV=production react-scripts start"
+    "start:prod": "REACT_APP_ENV=production react-scripts start",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +57,8 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@testing-library/cypress": "^10.0.3",
+    "cypress": "^14.3.2",
     "tailwindcss": "^3.4.17"
   }
 }
